fix(Job): reduce bottom margin spacing

--- a/src/components/Job.css
+++ b/src/components/Job.css
@@ -1,5 +1,5 @@
 .Job {
-  margin-bottom: var(--size-10);
+  margin-bottom: var(--size-8);
 }
 
 .Job__company {
